--- a/css/dom-ejercicios.css
+++ b/css/dom-ejercicios.css
@@ -80,21 +80,18 @@ video {
   left: 0;
   right: 0;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
   overflow-y: auto;
   background-color: var(--second-modal-color);
   opacity: 0;
   visibility: hidden;
   transition: transform 0.3s ease, opacity 0.5s ease;
   /* De arriba */
-  transform: translate(0, -100%);
+  /*  transform: translate(0, -100%); */
   /* De abajo */
-  transform: translate(0, 100%);
+  /* transform: translate(0, 100%); */
   /* De la derecha */
-  transform: translate(100%, 0);
+  /*   transform: translate(100%, 0); */
   /* De la izquierda */
   transform: translate(-100%, 0);
 }
@@ -124,6 +121,7 @@ video {
   width: inherit;
   display: flex;
   flex-direction: column;
+
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
